--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "eslint": "^8",
